# cryptopp-meson

cryptopp-7.0.0/: meson.build
